Fix contrast of help texts

--- a/graylog2-web-interface/public/stylesheets/graylog2.less
+++ b/graylog2-web-interface/public/stylesheets/graylog2.less
@@ -160,7 +160,7 @@ h1 .small, h2 .small, h3 .small, h4 .small, h5 .small, h6 .small,
 }
 
 .content p.description {
-  color: #939393;
+  color: #767676;
 }
 
 .content-head p {
